Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextObjInteger.quorum
class Main
    action Main
        Text v
        v:SetValue(Test())
    end

    action Test() returns Text
        integer var = 5
        return var
    end
end